--- a/ModularArithmetic/mainwindow.ui
+++ b/ModularArithmetic/mainwindow.ui
@@ -109,8 +109,8 @@
        <widget class="QLineEdit" name="number3_input">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>170</y>
+          <x>20</x>
+          <y>330</y>
           <width>301</width>
           <height>22</height>
          </rect>
@@ -119,8 +119,8 @@
        <widget class="QComboBox" name="operator_select_2">
         <property name="geometry">
          <rect>
-          <x>360</x>
-          <y>170</y>
+          <x>370</x>
+          <y>330</y>
           <width>271</width>
           <height>22</height>
          </rect>
@@ -129,8 +129,8 @@
        <widget class="QPushButton" name="calculate_btn_2">
         <property name="geometry">
          <rect>
-          <x>710</x>
-          <y>220</y>
+          <x>720</x>
+          <y>380</y>
           <width>93</width>
           <height>28</height>
          </rect>
@@ -145,14 +145,115 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>690</x>
-          <y>170</y>
+          <x>700</x>
+          <y>330</y>
           <width>321</width>
           <height>21</height>
          </rect>
         </property>
         <property name="readOnly">
          <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>170</y>
+          <width>111</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Discrete logarithm</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="number3_input_3">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>260</y>
+          <width>301</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="result_10">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>570</x>
+          <y>200</y>
+          <width>321</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="number3_input_4">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>200</y>
+          <width>301</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_10">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>200</y>
+          <width>61</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Number</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_11">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>260</y>
+          <width>61</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Base</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="calculate_btn_9">
+        <property name="geometry">
+         <rect>
+          <x>640</x>
+          <y>250</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Порахувати</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_12">
+        <property name="geometry">
+         <rect>
+          <x>470</x>
+          <y>200</y>
+          <width>61</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Result</string>
         </property>
        </widget>
       </widget>
