--- a/ModularArithmetic/mainwindow.ui
+++ b/ModularArithmetic/mainwindow.ui
@@ -49,7 +49,7 @@
           <property name="geometry">
            <rect>
             <x>30</x>
-            <y>470</y>
+            <y>380</y>
             <width>1001</width>
             <height>103</height>
            </rect>
@@ -83,7 +83,7 @@
              <item row="0" column="1">
               <widget class="QLabel" name="label_14">
                <property name="text">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Other algorithms&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;For not modular number&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -142,8 +142,8 @@
          <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
-            <x>10</x>
-            <y>120</y>
+            <x>20</x>
+            <y>100</y>
             <width>1011</width>
             <height>129</height>
            </rect>
@@ -217,24 +217,11 @@
            </item>
           </layout>
          </widget>
-         <widget class="Line" name="line_4">
-          <property name="geometry">
-           <rect>
-            <x>110</x>
-            <y>80</y>
-            <width>861</width>
-            <height>31</height>
-           </rect>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
          <widget class="QWidget" name="layoutWidget_2">
           <property name="geometry">
            <rect>
-            <x>10</x>
-            <y>320</y>
+            <x>20</x>
+            <y>250</y>
             <width>1011</width>
             <height>101</height>
            </rect>
@@ -267,6 +254,51 @@
             <widget class="QLabel" name="label_27">
              <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Primality tests&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+         <widget class="QWidget" name="layoutWidget_3">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>510</y>
+            <width>1011</width>
+            <height>101</height>
+           </rect>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_12">
+           <item row="1" column="0">
+            <widget class="QLineEdit" name="number3_input_5"/>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLineEdit" name="result_12">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QComboBox" name="operator_select_6"/>
+           </item>
+           <item row="2" column="0" colspan="3">
+            <widget class="QPushButton" name="calculate_btn_11">
+             <property name="text">
+              <string>Calculate</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLabel" name="label_28">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;For modular number&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
